package com.thoughtworks.parkinglot.parkingcontext.domain.parking;

import com.thoughtworks.parkinglot.parkingcontext.domain.finder.ParkingLot;

public interface ParkingLotFinderSpecification {
    ParkingLot findParkingLot();
}
