@startuml parkinglot
skinparam Shadowing false
skinparam class {
    BackgroundColor PaleTurquoise 
    ArrowColor SeaGreen
}

package parking <<core>> {
    interface FindParkingLotService <<Service>> {
        ParkingLot findParkingLot(ParkingLotFinderSpecification)
    }

    interface ParkingLotFinderSpecification {

    }

    interface ParkingLotFinderFactory {
        ParkingLotFinder newParkingManager()
        ParkingLotFinder newParkingBoy(ParkingBoyId id)
    }

    interface ParkingLotFinder {
        ParkingLot findParkingLotToPark()
    }


    class ParkingLot {
        -ParkingLotId id
        -Map<TicketId, Car> ticketToCarMap
        --
        +Ticket park(Car car)
        +Car pick(TicketId ticketId)
    }

    class Ticket {
        -String licensePlate
        -ParkingLotId parkingLotId
    }

    class Car {
        -String licensePlate
    }

    ParkingLot "1" *--> "many" Ticket
    ParkingLot "1" -> "many" Car
    FindParkingLotService ..> ParkingLotFinderSpecification
    ParkingLotFinderFactory ..> ParkingLotFinder
}

package finder {
    class ParkingManagerSpecification {

    }

    class ParkingBoySpecification {
        -ParkingBoyId parkingBoyId
    }

    class ParkingBoy {
        -String name
        -List<ParkingLot> parkingLots
        -ParkingPolicy parkingPolicy
        --
        +Optional<ParkingLot> find()
    }

    class ParkingManager {
        -String name
        -List<ParkingBoy> parkingBoys
        --
        +List<ParkingLot> listParkingLotIds()
        +Optional<ParkingLot> findParkingLot()
    }

    class ParkingPolicy {
        +ParkingLot findParkingLotToPark(Collection<ParkingLot> parkingLots)
    }

    ParkingManagerSpecification --|> ParkingLotFinderSpecification
    ParkingBoySpecification --|> ParkingLotFinderSpecification
    ParkingManager --|> ParkingLotFinder
    ParkingBoy --|> ParkingLotFinder
    ParkingManager *--> ParkingBoy
    ParkingBoy *--> ParkingPolicy
}

package Policy {
    class SeniorParkingPolicy {
        +ParkingLot findParkingLotToPark(Collection<ParkingLot> parkingLots)
    }
    
    class JuniorParkingPolicy {
        +ParkingLot findParkingLotToPark(Collection<ParkingLot> parkingLots)
    }

    SeniorParkingPolicy -|> ParkingPolicy
    JuniorParkingPolicy -|> ParkingPolicy
}

@enduml